Fixed issue display on mobile devices

--- a/styles/style.css
+++ b/styles/style.css
@@ -151,3 +151,21 @@ footer ul {
     display: flex;
     column-gap: 3em;
 }
+
+@media screen and (width <= 698px) {
+    header h1 {
+        font-size: 2.1em; 
+    }
+    nav {
+        column-gap: 1em;
+    }
+    nav a {
+        font-size: 1.2em;
+    }
+
+    article {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+}
